--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,21 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.39</version>
-        <relativePath />
+        <version>5.7</version>
     </parent>
 
     <groupId>nwellinghoff.jenkins.plugins</groupId>
     <artifactId>multibranch-build-regex-filter-extension</artifactId>
-    <version>v0.0.5-alpha</version>
+    <version>v0.0.6-beta</version>
     <packaging>hpi</packaging>
     <name>Pipeline: Multibranch build regex filter extension</name>
-    
+
     <description>This plugin provides additional configuration that allows you to filter multi branch builds by file masks using a regex pattern.
     Useful in large repositories with many CI jobs. Inspired and stubbed by https://wiki.jenkins.io/display/JENKINS/Multibranch+Build+Strategy+Extension+Plugin</description>
 
     <properties>
-        <jenkins.version>2.289.3</jenkins.version>
-        <java.level>8</java.level>
+        <jenkins.version>2.492.1</jenkins.version>
+        <java.level>17</java.level>
         <hpi.compatibleSinceVersion>2.0</hpi.compatibleSinceVersion>
     </properties>
 
@@ -37,11 +36,11 @@
             <name>Nick Wellinghoff</name>
         </developer>
     </developers>
-    
+
     <scm>
         <url>https://github.com/nick-wellinghoff/multibranch-build-regex-filter-extension</url>
-    <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <repositories>
         <repository>
@@ -61,8 +60,8 @@
         <dependencies>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.289.x</artifactId>
-                <version>1181.v04b_21d4b_0d6c</version>
+                <artifactId>bom-2.492.x</artifactId>
+                <version>4228.v0a_71308d905b_</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -73,7 +72,7 @@
         <dependency>
             <groupId>org.kohsuke</groupId>
             <artifactId>access-modifier-annotation</artifactId>
-            <version>1.11</version>
+            <version>1.16</version>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci</groupId>
@@ -105,7 +104,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>cloudbees-bitbucket-branch-source</artifactId>
-            <version>762.v969cfe087fc0</version>
+            <version>935.0.0</version>
         </dependency>
         <!-- /plugin dependencies -->
 
